gobmkida/c3/sgfAddPlayLast
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfAddPlayLast/src/sgf/sgfnode.c:942:12: error: expected expression
*( _OWORD *)&v4->child = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfAddPlayLast/src/sgf/sgfnode.c:942:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v4->child = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfAddPlayLast/src/sgf/sgfnode.c:943:12: error: expected expression
*( _OWORD *)&v4->props = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfAddPlayLast/src/sgf/sgfnode.c:943:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v4->props = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfAddPlayLast/src/obj/4/sgfnode.o] Error 1
